--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-pdf": "^5.3.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "three": "^0.132.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
